Bug 89958 - [IVB Macbook] WARNING: CPU: 0 PID: 6 at drivers/gpu/drm/i915/intel_audio.c:294 ilk_audio_codec_disable
Summary: [IVB Macbook] WARNING: CPU: 0 PID: 6 at drivers/gpu/drm/i915/intel_audio.c:29...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jani Nikula
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 89188 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-08 18:29 UTC by Chris Bainbridge
Modified: 2017-07-24 22:47 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
log with drm.debug=0xe (468.63 KB, text/plain)
2015-04-08 18:29 UTC, Chris Bainbridge
no flags Details
drm/i915/dp: do not touch audio on port a (1.40 KB, patch)
2015-04-09 09:48 UTC, Jani Nikula
no flags Details | Splinter Review

Description Chris Bainbridge 2015-04-08 18:29:24 UTC
Created attachment 114967 [details]
log with drm.debug=0xe

Linux version 4.0.0-rc7

Apr 08 19:22:44 debian kernel: ------------[ cut here ]------------
Apr 08 19:22:44 debian kernel: WARNING: CPU: 0 PID: 6 at drivers/gpu/drm/i915/intel_audio.c:294 ilk_audio_codec_disable+0x170/0x1b0()
Apr 08 19:22:44 debian kernel: WARN_ON(!port)
Apr 08 19:22:44 debian kernel: Modules linked in:
Apr 08 19:22:44 debian kernel: CPU: 0 PID: 6 Comm: kworker/u16:0 Not tainted 4.0.0-rc7 #48
Apr 08 19:22:44 debian kernel: Hardware name: Apple Inc. MacBookPro10,2/Mac-AFD8A9D944EA4843, BIOS MBP102.88Z.0106.B07.1501071215 01/07/2015
Apr 08 19:22:44 debian kernel: Workqueue: events_unbound async_run_entry_fn
Apr 08 19:22:44 debian kernel:  ffffffff81c02f78 ffff880265a57638 ffffffff8184b86e 000000000000a4a4
Apr 08 19:22:44 debian kernel:  ffff880265a57688 ffff880265a57678 ffffffff8104f2e5 ffff880265a57680
Apr 08 19:22:44 debian kernel:  ffff880263cb0000 00000000fffffeee 0000000030000000 00000000000e50c0
Apr 08 19:22:44 debian kernel: Call Trace:
Apr 08 19:22:44 debian kernel:  [<ffffffff8184b86e>] dump_stack+0x45/0x57
Apr 08 19:22:44 debian kernel:  [<ffffffff8104f2e5>] warn_slowpath_common+0x85/0xc0
Apr 08 19:22:44 debian kernel:  [<ffffffff8104f361>] warn_slowpath_fmt+0x41/0x50
Apr 08 19:22:44 debian kernel:  [<ffffffff814bcb50>] ilk_audio_codec_disable+0x170/0x1b0
Apr 08 19:22:44 debian kernel:  [<ffffffff814bd559>] intel_audio_codec_disable+0x19/0x20
Apr 08 19:22:44 debian kernel:  [<ffffffff814f6dcd>] intel_disable_dp+0x9d/0xe0
Apr 08 19:22:44 debian kernel:  [<ffffffff814d0762>] ironlake_crtc_disable+0x162/0x7f0
Apr 08 19:22:44 debian kernel:  [<ffffffff814d1cb1>] __intel_set_mode+0x951/0xb10
Apr 08 19:22:44 debian kernel:  [<ffffffff814d8da3>] intel_crtc_set_config+0xc13/0xfe0
Apr 08 19:22:44 debian kernel:  [<ffffffff81465600>] ? drm_atomic_state_free+0x50/0x60
Apr 08 19:22:44 debian kernel:  [<ffffffff81441f05>] ? drm_atomic_helper_plane_set_property+0x85/0xd0
Apr 08 19:22:44 debian kernel:  [<ffffffff81456176>] drm_mode_set_config_internal+0x66/0x100
Apr 08 19:22:44 debian kernel:  [<ffffffff81443858>] restore_fbdev_mode+0xc8/0xf0
Apr 08 19:22:44 debian kernel:  [<ffffffff81445864>] drm_fb_helper_restore_fbdev_mode_unlocked+0x24/0x70
Apr 08 19:22:44 debian kernel:  [<ffffffff814458cd>] drm_fb_helper_set_par+0x1d/0x40
Apr 08 19:22:44 debian kernel:  [<ffffffff814e76d5>] intel_fbdev_set_par+0x15/0x60
Apr 08 19:22:44 debian kernel:  [<ffffffff813a8fc8>] fbcon_init+0x568/0x5f0
Apr 08 19:22:44 debian kernel:  [<ffffffff81406f07>] visual_init+0xb7/0x120
Apr 08 19:22:44 debian kernel:  [<ffffffff81409546>] do_bind_con_driver+0x176/0x3b0
Apr 08 19:22:44 debian kernel:  [<ffffffff81409cd4>] do_take_over_console+0xb4/0x1e0
Apr 08 19:22:44 debian kernel:  [<ffffffff813a424b>] do_fbcon_takeover+0x5b/0xc0
Apr 08 19:22:44 debian kernel:  [<ffffffff813a9bfd>] fbcon_event_notify+0x7dd/0x8e0
Apr 08 19:22:44 debian kernel:  [<ffffffff8106bf1f>] notifier_call_chain+0x4f/0x80
Apr 08 19:22:44 debian kernel:  [<ffffffff8106c236>] __blocking_notifier_call_chain+0x46/0x70
Apr 08 19:22:44 debian kernel:  [<ffffffff8106c271>] blocking_notifier_call_chain+0x11/0x20
Apr 08 19:22:44 debian kernel:  [<ffffffff813abf16>] fb_notifier_call_chain+0x16/0x20
Apr 08 19:22:44 debian kernel:  [<ffffffff813ae1ce>] register_framebuffer+0x1fe/0x340
Apr 08 19:22:44 debian kernel:  [<ffffffff81445b44>] drm_fb_helper_initial_config+0x254/0x3a0
Apr 08 19:22:44 debian kernel:  [<ffffffff814e8976>] intel_fbdev_initial_config+0x16/0x20
Apr 08 19:22:44 debian kernel:  [<ffffffff8106d8d6>] async_run_entry_fn+0x36/0xf0
Apr 08 19:22:44 debian kernel:  [<ffffffff810661a0>] process_one_work+0x150/0x420
Apr 08 19:22:44 debian kernel:  [<ffffffff810667cb>] worker_thread+0x6b/0x480
Apr 08 19:22:44 debian kernel:  [<ffffffff81066760>] ? rescuer_thread+0x2f0/0x2f0
Apr 08 19:22:44 debian kernel:  [<ffffffff8106b116>] kthread+0xd6/0xf0
Apr 08 19:22:44 debian kernel:  [<ffffffff8106b040>] ? kthread_create_on_node+0x180/0x180
Apr 08 19:22:44 debian kernel:  [<ffffffff81853b88>] ret_from_fork+0x58/0x90
Apr 08 19:22:44 debian kernel:  [<ffffffff8106b040>] ? kthread_create_on_node+0x180/0x180
Apr 08 19:22:44 debian kernel: ---[ end trace 072ac885e95a39f4 ]---
Comment 1 Jani Nikula 2015-04-09 09:48:39 UTC
Created attachment 114978 [details] [review]
drm/i915/dp: do not touch audio on port a

IVB cpu eDP ctl register appears to have alternate scrambler reset in place of the audio enable bit. Please try the attached patch. It's not the final solution, but something for starters.
Comment 2 Chris Bainbridge 2015-04-09 13:33:00 UTC
Tested the patch and the warning is gone.
Comment 3 Jani Nikula 2015-04-09 14:22:23 UTC
Thanks, I'll need to think about a minimal fix for stable, and a broader fix for eDP in general.
Comment 4 Jani Nikula 2015-05-04 14:20:28 UTC
http://patchwork.freedesktop.org/patch/48502
Comment 5 Jani Nikula 2015-05-05 14:03:15 UTC
Another version, hopefully final... Chris, may I bother you for a re-test of this one please?

http://patchwork.freedesktop.org/patch/48568
Comment 6 Chris Bainbridge 2015-05-05 15:20:32 UTC
Sure. I booted with the new patch, and the warning is gone.
Comment 7 Jani Nikula 2015-05-06 09:29:59 UTC
(In reply to Chris Bainbridge from comment #6)
> Sure. I booted with the new patch, and the warning is gone.

Many thanks for the report and all the testing!

Fixed by

commit 9fcb1704d1d51b12e2f03c78bca013d0cbbb7c98
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Tue May 5 16:32:12 2015 +0300

    drm/i915/dp: there is no audio on port A

in drm-intel-fixes, headed for v4.1 and cc: stable.
Comment 8 Ander Conselvan de Oliveira 2015-06-03 17:51:39 UTC
*** Bug 89188 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.